--- a/L20230109_TCPClient.vcxproj
+++ b/L20230109_TCPClient.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClCompile Include="client.cpp" />
     <ClCompile Include="Practice.cpp" />
+    <ClCompile Include="Client2.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
